added nav bar option to view testrail results

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="#" class="logo">Gate3 Pen Testing</a>
       <ul>
         <li>
-          <a href="Result">ASSESSMENT RESULT</a>
+          <a href="javascript:" onclick="fetchQUIZResults();">ASSESSMENT RESULT</a>
         </li>
         <li>
           <a href="#PenTest">PEN TEST</a>
