changing the class name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- Hero Banner Section (Main introductory section of the page) -->
-    <div class="hero-banner">
+    <div class="security-banner">
       <div class="wrapper">
         <!-- Small intro text about the QA team -->
         <h4>Elima from <a target="_blank" href="https://ellisdon-blueprints.atlassian.net/wiki/spaces/QAS/pages/587006137/Getting+started+with+Quality+Assurance">QA Team</a> Presents </h4>
