changed the class name

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- Separator between sections -->
     <div class="sep"></div>
     <!-- Image representing security testing -->
-    <img class="security-testing" src="img/securityTesting.png" width="735" height="399" alt="Security Testing" />
+    <img class="securityTesting" src="img/securityTesting.png" width="735" height="399" alt="Security Testing" />
     <!-- Footer Section with creator info and GitHub link -->
     <footer>
       <div class="wrapper">Made by Elima Tripathy from QA TEAM <a target="_blank" href="https://github.com/TripathyElima-Applitools/Gate3-Security-Testing"> GitHub Repo</a>
